# covid-eda-v2

./: .gitignore  pyproject.toml
config/: config.example.yaml
notebooks/: initial.ipynb  multivariate.ipynb
src/covid/: app_config.py  cli.py  config_loader.py  run_config.py
src/covid/commands/: __init__.py  generate_shap_plots.py  run_cross_validation.py  run_feature_selection.py
src/covid/cross_val/: __init__.py
src/covid/cross_val/domain/: cross_validator.py  cv_plotter.py  cv_result.py  cv_tracker.py  null_cv_tracker.py
src/covid/cross_val/infra/: boxplot_cv_plotter.py  file_cv_tracker.py  training_config.py
src/covid/data/: __init__.py  covid_dataset.py  dataset_config.py
src/covid/data/domain/: covid_dataset.py  covid_dataset_loader.py  covid_dataset_tracker.py  data_cleaning_config.py  null_covid_dataset_tracker.py
src/covid/data/infra/: covid_csv_loader.py  file_covid_tracker.py
src/covid/experiment/: run_experiment.py
src/covid/feature/: __init__.py  feature_selector.py  preprocessor_factory.py  preprocessor_registry.py
src/covid/metric/: __init__.py  metric_factory.py  metric_registry.py
src/covid/model/: __init__.py  model_factory.py  model_registry.py  types.py
src/covid/pipeline/: create_pipes.py
src/covid/tracking/: __init__.py  experiment_tracker.py  file_tracker.py  null_tracker.py
src/covid/training/: __init__.py  cross_validator.py  cv_result.py  cv_tracker.py  null_cv_tracker.py  training_config.py
tests/unit/data/: conftest.py  test_covid_dataset.py
tests/unit/metric/: conftest.py  test_metric_factory.py
(+2 files in other folders)
